add bootstrap css

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>RoboPG</title>
+	<!-- Bootstrap core CSS -->
+    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Font Awesome CSS -->
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
+    
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
