--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
 <body>
 	<h2>Test</h2>
 	<div id="test"></div>
+	
+<!--javascript-->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
